# EPC-tools

./: .gitignore  EPC-tools.cabal  README.md  stack.yaml
RapidFire/: RapidFire.cabal
RapidFire/src/Appian/: Client.hs  Instances.hs  Lens.hs  Types.hs
RapidFire/src/Appian/Internal/: Appian.hs  Arbitrary.hs  Updates.hs
RapidFire/src/Scripts/: AdminReview.hs  Assignment.hs  ComadIntake.hs  ComadReview.hs  CreateCSCase.hs  DPL.hs  FCCForm471.hs  FCCForm471Types.hs  FCCForm486.hs
RapidFire/src/Util/: Parallel.hs
UI/: UI.cabal
UI/app/: Main.hs
UI/src/: UI.hs
USACScripts/: USACScripts.cabal
USACScripts/src/Scripts/: AdminIntake.hs  Assignment.hs  ComadIntake.hs  ComadReview.hs  ComadReviewTypes.hs  Common.hs  CreateCSCase.hs  DisplayInvoiceDetails.hs  Execute.hs  ExpressionTest.hs  FCCForm471.hs  FCCForm471Certification.hs  FCCForm471Common.hs  FCCForm471EditApplication.hs  FCCForm471ReviewAssignment.hs  FCCForm471Types.hs  FCCForm486.hs  FCCForm500Intake.hs  InitialReview.hs  Opts.hs  Parseable.hs  Random.hs  ReviewCommon.hs  SPINChangeIntake.hs  ServiceSubstitutionIntake.hs  Test.hs  Util.hs  ViewFCCForm470.hs  ViewFCCForm471.hs
app/: Main.hs  Results.hs
automater/: automater.cabal  stack.yaml
automater/app/: Main.hs
automater/src/: Appian.hs  CreateRequest.hs  HTTP.hs  JSONTree.hs  JSONTreeLA.hs  JSONTreePA.hs  JSONTreeStreaming.hs  Lang.hs  Parsers.hs  StreamingLang.hs  Tagless.hs
automater/src/Appian/: Client.hs  Instances.hs  Lens.hs  Types.hs
automater/src/Appian/Internal/: Appian.hs
automater/src/Scripts/: AdminIntake.hs  AdminReview.hs  Assignment.hs  CIPACertifications.hs  ComadReview.hs  Common.hs  CreateCSCase.hs  DPL.hs  ExpressionTest.hs  FCCForm471.hs  FCCForm471Certification.hs  FCCForm471Common.hs  FCCForm471ReviewAssignment.hs  FCCForm471Types.hs  FCCForm486.hs  FCCFormm471.hs  InitialReview.hs  Noise.hs  Opts.hs  ProducerConsumer.hs  RedLight.hs  ReviewCommon.hs  SPINChangeIntake.hs  Test.hs  Util.hs
automater/src/Util/: Parallel.hs
log-downloader/: README.md  log-downloader.cabal
log-downloader/src/: Core.hs  GetLogs.hs
log-downloader/src/Logs/: Core.hs  GetLogs.hs  Opts.hs
plots/: plots.cabal
plots/src/: ParseSystem.hs  Plot.hs  PlotSystem.hs  PlotTest.hs  StreamParser.hs
plots/src/Plot/: Metrics.hs  Opts.hs
results/: results.cabal  stack.yaml
results/src/: Common.hs  JBossLog.hs  Results.hs
scheduler-ui/: scheduler-ui.cabal  stack.yaml
scheduler-ui/src/: Lib.hs  Redirect.hs  Scheduler.hs  Server.hs  Types.hs
scheduler-ui/src/Scheduler/: Arrow.hs  Execute.hs  Google.hs  Icons.hs  Lib.hs  Opts.hs  Server.hs  Types.hs  Util.hs
scheduler-ui/src/Scheduler/Google/: Server.hs  Types.hs
scheduler-ui/src/Scheduler/Google/ghcjs/: Common.hs  DriveUI.hs  Main.hs  SchedulerUI.hs
scheduler-ui/test/: Spec.hs
sheets/: sheets.cabal  stack.yaml
sheets/src/: Sheets.hs
sheets/src/Sheets/: AggregateSheets.hs  Core.hs  ExpressionDetailsSheet.hs  Generic.hs  Opts.hs
src/: AggregateSheets.hs  Execute.hs  GetLogs.hs  SendMail.hs  Server.hs  Table.hs  Types.hs  Validate.hs
stats/: stack.yaml  stats.cabal
stats/src/: Stats.hs
stats/src/Stats/: CsvStream.hs  Fold.hs  Opts.hs  ParseAggregateRow.hs  ParseSample.hs  Types.hs
