name:                EPC-tools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/EPC-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Execute
                       Server
                       Types
                       GetLogs
                       SendMail
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , directory
                     , conduit-combinators
                     , conduit-extra
                     , process
                     , time
                     , lifted-async
                     , filepath
                     , servant-server
                     , machinecell-contrib
                     , aeson
                     , lucid
                     , bytestring
                     , http-media
                     , wai
                     , warp
                     , path
                     , resourcet
                     , http-client
                     , http-conduit
                     , conduit
                     , http-types
                     , hxt
                     , smtp-mail
                     , mime-mail
                     , text
  default-language:    Haskell2010

executable EPC-tools
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EPC-tools
                     , classy-prelude
                     , warp
                     , path
                     , hs-config
                     , time
                     , smtp-mail
                     , mime-mail
  default-language:    Haskell2010

executable results
  hs-source-dirs:      app
  main-is:             Results.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , EPC-tools
                     , classy-prelude
                     , resourcet
                     , time
                     , machinecell-contrib
                     , data-default
                     , mtl
                     , filemanip
                     , filepath
  default-language:    Haskell2010

test-suite EPC-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , EPC-tools
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/EPC-tools
