name:                RapidFire
version:             0.1.0.0
homepage:            https://github.com/githubuser/automater#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Appian
                     , Appian.Types
                     , Appian.Instances
                     , Appian.Lens
                     , Appian.Client
                     , Util.Parallel
                     , Appian.Internal.Appian
  build-depends:       base
                     , lens
                     , aeson
                     , lens-aeson
                     , classy-prelude
                     , servant-client
                     , servant-client-core
                     , cookie
                     , http-client
                     , http-media
                     , servant
                     , exceptions
                     , http-client-tls
                     , time
                     , attoparsec
                     , optparse-applicative
                     , monad-logger
                     , streaming
                     , resourcet
                     , cassava
                     , stats
                     , lens-action
                     , QuickCheck
                     , retry
                     , monad-time
                     , mtl
                     , case-insensitive
                     , async-pool
                     , random-fu
                     , random-source
                     , http-types
                     , mmorph
                     , formatting
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/automater
