name:                USACScripts
version:             0.1.0.0
homepage:            https://github.com/githubuser/automater#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scripts.FCCForm471
                     , Scripts.FCCForm471Types
                     , Scripts.FCCForm471ReviewAssignment
                     , Scripts.FCCForm471Common
                     , Scripts.FCCForm471Certification
                     , Scripts.Opts
                     , Scripts.CreateCSCase
                     , Scripts.Test
                     , Scripts.Common
                     , Scripts.FCCForm486
                     , Scripts.SPINChangeIntake
                     , Scripts.InitialReview
                     , Scripts.ReviewCommon
                     , Scripts.AdminReview
                     , Scripts.Assignment
                     , Scripts.AdminIntake
                     , Scripts.ComadReview
                     , Scripts.ComadReviewTypes
                     , Scripts.Noise
                     , Scripts.ExpressionTest
                     , Scripts.ProducerConsumer
                     , Scripts.ViewFCCForm470
                     , Scripts.ViewFCCForm471
                     , Scripts.Execute
                     , Scripts.Parseable
                     , Scripts.ComadIntake
  build-depends:       base
                     , lens
                     , aeson
                     , lens-aeson
                     , aeson-pretty
                     , classy-prelude
                     , servant-client
                     , servant-client-core
                     , cookie
                     , http-client
                     , http-media
                     , servant
                     , exceptions
                     , http-client-tls
                     , time
                     , attoparsec
                     , optparse-applicative
                     , monad-logger
                     , streaming
                     , resourcet
                     , cassava
                     , stats
                     , lens-action
                     , QuickCheck
                     , retry
                     , monad-time
                     , mtl
                     , case-insensitive
                     , async-pool
                     , random-fu
                     , random-source
                     , http-types
                     , mmorph
                     , formatting
                     , RapidFire
  default-language:    Haskell2010

-- test-suite automater-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , automater
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/automater
