name:                automater
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/automater#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HTTP
                     , CreateRequest
                     , JSONTreeLA
                     , Parsers
                     , Tagless
                     , JSONTreeStreaming
                     , JSONTree
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , aeson
                     , hxt
                     , data-default
                     , resourcet
                     , http-client
                     , http-client-tls
                     , time
                     , http-conduit
                     , case-insensitive
                     , http-types
                     , machinecell
                     , machinecell-contrib
                     , attoparsec
                     , bytestring
                     , Stack
                     , streaming
                     , streaming-utils
                     , streaming-bytestring
  default-language:    Haskell2010

test-suite automater-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , automater
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/automater
