name:                automater
version:             0.1.0.0
homepage:            https://github.com/githubuser/automater#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Appian
                     , Appian.Types
                     , Appian.Instances
                     , Appian.Lens
                     , Appian.Client
                     , Scripts.FCCForm471
                     , Scripts.Opts
                     , Scripts.CreateCSCase
                     , Scripts.Test
                     , Scripts.Common
                     , Scripts.FCCForm486
                     , Scripts.SPINChangeIntake
                     , Scripts.InitialReview
                     , Scripts.ReviewCommon
                     , Scripts.AdminReview
                     , Scripts.Assignment
                     , Scripts.AdminIntake
                     , Scripts.ComadReview
                     , Util.Parallel
  build-depends:       base
                     , lens
                     , aeson
                     , lens-aeson
                     , classy-prelude
                     , servant-client
                     , servant-client-core
                     , cookie
                     , http-client
                     , http-media
                     , servant
                     , exceptions
                     , http-client-tls
                     , time
                     , attoparsec
                     , optparse-applicative
                     , monad-logger
                     , streaming
                     , resourcet
                     , MonadRandom
                     , cassava
                     , stats
                     , lens-action
                     , QuickCheck
                     , retry
                     , monad-time
                     , mtl
                     , case-insensitive
  default-language:    Haskell2010

test-suite automater-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , automater
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/automater
