name:                log-downloader
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/log-downloader#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:       Logs.GetLogs
                     , Logs.Core
  exposed-modules:     Logs.Opts
  build-depends:       base >= 4.7 && < 5
                     , streaming
                     , classy-prelude
                     , streaming-utils
                     , http-types
                     , case-insensitive
                     , streaming-bytestring
                     , time
                     , http-client-tls
                     , filepath
                     , optparse-applicative
                     , exceptions
  default-language:    Haskell2010

test-suite log-downloader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , log-downloader
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/log-downloader
