name:                results
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/EPC-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Results
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , classy-prelude
                     , resourcet
                     , time
                     , data-default
                     , mtl
                     , filemanip
                     , filepath
                     , formatting
                     , text
                     , machinecell-contrib
  default-language:    Haskell2010
