name:                scheduler-ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scheduler-ui#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheduler.Lib
                     , Scheduler.Server
  build-depends:       base
                     , lucid
                     , classy-prelude
                     , servant
                     , servant-server
                     , bytestring
                     , warp
                     , http-media
                     , servant-lucid
                     , text
                     , http-types
                     , machinecell-contrib
                     , lens
                     , transformers
  default-language:    Haskell2010
  other-modules:       Scheduler.Types
                     , Scheduler.Arrow
                     , Scheduler

-- executable scheduler-ui-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , scheduler-ui
--   default-language:    Haskell2010

-- test-suite scheduler-ui-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , scheduler-ui
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scheduler-ui
