name:                scheduler-ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scheduler-ui#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheduler.Opts
  build-depends:       base
                     , lucid
                     , classy-prelude
                     , servant
                     , servant-server
                     , bytestring
                     , warp
                     , http-media
                     , servant-lucid
                     , text
                     , http-types
                     , lens
                     , transformers
                     , time
                     , optparse-applicative
                     , streaming-commons
                     , streaming
                     , streaming-bytestring
                     , constraints
  default-language:    Haskell2010
  other-modules:       Scheduler.Types
                     , Scheduler.Arrow
                     , Scheduler
                     , Scheduler.Lib
                     , Scheduler.Server
                     , Scheduler.Execute

source-repository head
  type:     git
  location: https://github.com/githubuser/scheduler-ui
