name:                scheduler-ui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scheduler-ui#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scheduler.Opts
                     , Scheduler
  build-depends:       base
                     , lucid
                     , classy-prelude
                     , servant
                     , servant-server
                     , bytestring
                     , warp
                     , http-media
                     , servant-lucid
                     , text
                     , http-types
                     , lens
                     , transformers
                     , time
                     , optparse-applicative
                     , streaming-commons
                     , streaming
                     , streaming-bytestring
                     , constraints
                     , diagrams
                     , diagrams-svg
                     , diagrams-lib
                     , svg-builder
                     , directory
                     , filepath
                     , filemanip
                     , colour
                     , monad-logger
                     , gogol
                     , gogol-drive
                     , mono-traversable
                     , aeson
                     , resourcet
                     , conduit
                     , conduit-combinators
                     , zip-archive
                     , mtl
  default-language:    Haskell2010
  other-modules:       Scheduler.Types
                     , Scheduler.Arrow
                     , Scheduler.Lib
                     , Scheduler.Server
                     , Scheduler.Execute
                     , Scheduler.Icons
                     , Scheduler.Util
                     , Scheduler.Google
                     , Scheduler.Google.Server
                     , Scheduler.Google.Types

test-suite EPC-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , QuickCheck
                     , scheduler-ui
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scheduler-ui
