name:                stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stats#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stats.Opts
                     , Stats.CsvStream
  build-depends:       base >= 4.7 && < 5
                     , plots
                     , classy-prelude
                     , attoparsec
                     , time
                     , lens
                     , bytestring
                     , streaming-bytestring
                     , streaming
                     , streaming-utils
                     , resourcet
                     , optparse-applicative
                     , boxes
                     , filemanip
                     , foldl
                     , tdigest
                     , cassava
                     , data-default
                     , xlsx
                     , sheets
                     , monad-logger
                     , aeson
  other-modules:       Stats
                     , Stats.Types
                     , Stats.Fold
  default-language:    Haskell2010

test-suite stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stats
